# amalgamate

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yml  release.yaml
assets/ldtk/: map.ldtk
assets/sounds/music/: ATTRIBUTION
docs/: gdd.md
src/: config.rs  lib.rs  main.rs
src/core/: camera.rs  exploration.rs  interaction.rs  map.rs  mod.rs  movement.rs  npc.rs  physics.rs  player.rs
src/resources/: colors.rs  images.rs  ldtk.rs  mod.rs  prelude.rs  sounds.rs
src/scenes/: mod.rs
src/scenes/loading/: mod.rs  ui.rs
src/scenes/play/: mod.rs
src/scenes/title/: mod.rs  ui.rs
src/ui/components/: action.rs
src/ui/components/text/: embossed.rs  mod.rs  simple.rs
wasm/: index.html
