[package]
name = "amalgamate"
version = "0.1.0"
authors = ["Orlando Valverde <orlando.jesig.va@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[features]
default = ['bevy/dynamic']

[dependencies.bevy_prototype_lyon]
version = "0.5.0"

[dependencies.bevy_hanabi]
version = "0.2"
default-features = false
features = ["2d"]

[dependencies.bevy]
version = "0.7.0"
default-features = false
features = ["bevy_gilrs", "bevy_winit", "render", "png", "hdr", "x11", "filesystem_watcher"]

[dependencies.bevy_kira_audio]
version = "0.9.0"
default-features = false
features = ["wav"]
